create carrusel/ logo with sass

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -4,15 +4,131 @@
 	<meta charset="UTF-8">
 	<title>Ayurveda & Yoga</title>
 	<link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.min.css">
+
+	<link rel="stylesheet" type="text/css" href="../css/style.css">
+
 </head>
 <body>
-
-<p class="container">Bienvenido!</p>
-
-
+<div class="container">
+ <img src="../img/logo.png" >
+</div>
+<div class="container">
+    <div id="myCarousel" class="carousel slide" data-ride="carousel">
+        <!-- Wrapper for slides -->
+        <div class="carousel-inner">
+            <div class="item active">
+                <img src="../img/OIH96H0.jpg" width="800" heigth="100">
+                <div class="carousel-caption">
+                    <h3>
+                        Headline</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod
+                        tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. Lorem
+                        ipsum dolor sit amet, consetetur sadipscing elitr.</p>
+                </div>
+            </div>
+            <!-- End Item -->
+            <div class="item">
+                <img src="http://placehold.it/1200x400/e67e22/ffffff&text=Projects">
+                <div class="carousel-caption">
+                    <h3>
+                        Headline</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod
+                        tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. Lorem
+                        ipsum dolor sit amet, consetetur sadipscing elitr.</p>
+                </div>
+            </div>
+            <!-- End Item -->
+            <div class="item">
+                <img src="http://placehold.it/1200x400/2980b9/ffffff&text=Portfolio">
+                <div class="carousel-caption">
+                    <h3>
+                        Headline</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod
+                        tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. Lorem
+                        ipsum dolor sit amet, consetetur sadipscing elitr.</p>
+                </div>
+            </div>
+            <!-- End Item -->
+            <div class="item">
+                <img src="http://placehold.it/1200x400/8e44ad/ffffff&text=Services">
+                <div class="carousel-caption">
+                    <h3>
+                        Headline</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod
+                        tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. Lorem
+                        ipsum dolor sit amet, consetetur sadipscing elitr.</p>
+                </div>
+            </div>
+            <!-- End Item -->
+            <div class="item">
+                <img src="http://placehold.it/1200x400/2980b9/ffffff&text=Portfolio">
+                <div class="carousel-caption">
+                    <h3>
+                        Headline</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod
+                        tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. Lorem
+                        ipsum dolor sit amet, consetetur sadipscing elitr.</p>
+                </div>
+            </div>
+             <!-- End Item -->
+        </div>
+        <!-- End Carousel Inner -->
+        <ul class="nav nav-pills nav-justified">
+            <li data-target="#myCarousel" data-slide-to="0" class="active"><a href="#"><i class="glyphicon glyphicon-home"></i> Retiros</a></li>
+            <li data-target="#myCarousel" data-slide-to="1"><a href="#"><i class="glyphicon glyphicon-education"></i> Formaciones</a></li>
+            <li data-target="#myCarousel" data-slide-to="2"><a href="#"> <i class="glyphicon glyphicon-edit"></i> Talleres</a></li>
+            <li data-target="#myCarousel" data-slide-to="3"><a href="#"> <i class="glyphicon glyphicon-info-sign"></i> Conferencias</a></li>
+            <li data-target="#myCarousel" data-slide-to="4"><a href="#"> <i class="glyphicon glyphicon-user"></i> Maestros espirituales</a></li>
+        </ul>
+   
+    <!-- End Carousel -->
+</div>
+</div>
   <script src="../bower_components/jquery/dist/jquery.min.js"></script>
   <script src="../bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+  <script src="../js/carrusel.js"></script>
 </body>
+
+<!-- <i class="fa fa-map-marker"></i> // maps
+<i class="ionicons ion-ios-location-outline"></i> // maps bo
+<i class="fa fa-sign-out"></i> // logout
+<i class="ionicons ion-log-out"></i> // logout bo
+<i class="mega-octicon octicon-sign-out"></i> // logout puerta
+<i class="fa fa-trash-o"></i> // eliminar-basura
+<i class="ionicons ion-ios-trash-outline"></i> // eliminar-basura bo
+<i class="fa fa-user"></i> //login
+<i class="ionicons ion-ios-person"></i> // login bo
+<i class="fi-check"></i> // check
+<i class="fi-minus-circle"></i> // ocultar
+<i class="ionicons ion-ios-close-outline"></i> // x 
+<i class="ionicons ion-ios-minus-outline"></i> // ocultar bo
+<i class="glyphicon glyphicon-plus-sign"></i> // mostrar
+<i class="ionicons ion-ios-plus-outline"></i> // mostrar bo
+<i class="fi-pencil"></i> // editar
+<i class="ionicons ion-ios-compose-outline"></i> // editar bo
+<i class="glyphicon glyphicon-education"></i> // estudiar
+<i class="glyphicon glyphicon-home"></i> // home
+<i class="glyphicon glyphicon-tag"></i> tag
+<i class="ionicons ion-ios-pricetag-outline"></i> // tag bo
+<i class="icomoon icon-search"></i> // lupa
+<i class="ionicons ion-ios-search"></i> lupa bo
+<i class="ionicons ion-android-time"></i> //reloj bo
+<i class="ionicons ion-ios-time-outline"></i> // reloj
+<i class="ionicons ion-information-circled"></i> // information
+<i class="ionicons ion-ios-calendar-outline"></i> // calendario
+<i class="mega-octicon octicon-calendar"></i> // calendario bo
+<i class="ionicons ion-social-javascript-outline"></i> // javascript
+<i class="ionicons ion-social-html5-outline"></i> // html5
+<i class="ionicons ion-social-sass"></i> // sass
+<i class="ionicons ion-social-css3-outline"></i> // css3
+<i class="material-icons">blur_on</i> //cercle
+<i class="material-icons">thumb_up</i> // ok
+ -->
 
   
 </html>
