--- a/public/html/index.html
+++ b/public/html/index.html
@@ -4,20 +4,55 @@
 	<meta charset="UTF-8">
 	<title>Ayurveda & Yoga</title>
 	<link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.min.css">
-
 	<link rel="stylesheet" type="text/css" href="../css/style.css">
+	<link href="https://fonts.googleapis.com/css?family=Lobster+Two" rel="stylesheet">
+	<link rel="icon" type="image/png" href="../img/logo.png" />
 
 </head>
+
 <body>
-<div class="container">
- <img src="../img/logo.png" >
-</div>
-<div class="container">
-    <div id="myCarousel" class="carousel slide" data-ride="carousel">
+
+
+<nav class="navbar  navbar-default  navbar-fixed-top header-mine">
+    <div class="container">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+            <span class="sr-only"> Toggle navigation</span>
+            <span class="icon-bar"> </span>
+            <span class="icon-bar"> </span>
+            <span class="icon-bar"> </span>
+        </button>
+        <div class="navbar-collapse collapse">
+            <ul class="nav navbar-nav navbar-left">
+                <li><a href="about.html"><i class="glyphicon glyphicon-envelope"></i> info@encuentratucamino.com</a></li>
+            </ul>
+            <ul class="nav navbar-nav navbar-right">
+                <li><a href="about.html"><i class="glyphicon glyphicon-heart-empty"></i> Mis favoritos</a></li>
+                <li><a href="about.html"><i class="glyphicon glyphicon-log-in"></i> loggin</a></li>
+            </ul>
+        </div>
+    </div>
+
+    <nav class="navbar navbar-default">
+    <div class="container">
+       <img class="logo" src="../img/logo.png">
+           <ul class="top-menu">
+                <li><a href="about.html"> Encuentra <small><i class="glyphicon glyphicon-menu-down"></i></small> </a></li>
+                <li><a href="about.html"> Conóncenos</a></li>
+                <li><a href="about.html"> Blog</a></li>
+                 <li><a href="about.html"> Anúnciate gratis</a></li>
+            </ul>
+        </div>
+    </div>
+</nav>
+</nav>
+
+
+ <div class="container">
+	<div id="myCarousel" class="carousel slide" data-ride="carousel">
         <!-- Wrapper for slides -->
         <div class="carousel-inner">
             <div class="item active">
-                <img src="../img/OIH96H0.jpg" width="800" heigth="100">
+                 <img src="http://placehold.it/1200x400/e67e22/fffff&text=Projects">
                 <div class="carousel-caption">
                     <h3>
                         Headline</h3>
@@ -43,12 +78,15 @@
             <div class="item">
                 <img src="http://placehold.it/1200x400/2980b9/ffffff&text=Portfolio">
                 <div class="carousel-caption">
-                    <h3>
-                        Headline</h3>
-                    <p>
-                        Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod
-                        tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. Lorem
-                        ipsum dolor sit amet, consetetur sadipscing elitr.</p>
+                  <div class="form-group">
+ 						<label for="sel1">Selecciona una categoria:</label>
+							 <i class="glyphicon glyphicon-hand-down"></i> <select class="form-control" id="sel1">
+    							<option>Categoria...</option>
+    							<option>Yoga</option>
+    							<option>Ayurveda</option>
+							</select>
+						</div>
+
                 </div>
             </div>
             <!-- End Item -->
@@ -85,13 +123,28 @@
             <li data-target="#myCarousel" data-slide-to="3"><a href="#"> <i class="glyphicon glyphicon-info-sign"></i> Conferencias</a></li>
             <li data-target="#myCarousel" data-slide-to="4"><a href="#"> <i class="glyphicon glyphicon-user"></i> Maestros espirituales</a></li>
         </ul>
-   
+   <br><br><br>
     <!-- End Carousel -->
 </div>
-</div>
+
+<div class="welcome text-center">
+    <div class="row">
+        <p>Bienvenido a la comunidad de Yoga y Ayurveda</p>
+             <div class="hr-line"></div>
+    </div>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+   
+
+
   <script src="../bower_components/jquery/dist/jquery.min.js"></script>
   <script src="../bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
   <script src="../js/carrusel.js"></script>
+  <script src="../js/welcome.js"></script>
 </body>
 
 <!-- <i class="fa fa-map-marker"></i> // maps
