--- a/public/html/index.html
+++ b/public/html/index.html
@@ -23,10 +23,10 @@
             <span class="icon-bar"> </span>
         </button>
         <div class="navbar-collapse collapse">
-            <ul class="nav navbar-nav navbar-left">
+            <ul class="nav navbar-nav navbar-left color-blue">
                 <li><a href="about.html"><i class="glyphicon glyphicon-envelope"></i> info@encuentratucamino.com</a></li>
             </ul>
-            <ul class="nav navbar-nav navbar-right">
+            <ul class="nav navbar-nav navbar-right color-blue">
                 <li><a href="about.html"><i class="glyphicon glyphicon-heart-empty"></i> Mis favoritos</a></li>
                 <li><a href="about.html"><i class="glyphicon glyphicon-log-in"></i> loggin</a></li>
             </ul>
