--- a/public/html/index.html
+++ b/public/html/index.html
@@ -3,11 +3,11 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Ayurveda & Yoga</title>
-	<link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="../css/style.css">
+	<link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="/css/style.css">
 	<link href="https://fonts.googleapis.com/css?family=Lobster+Two" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=News+Cycle" rel="stylesheet">
-	<link rel="icon" type="image/png" href="../img/logo.png" />
+	<link rel="icon" type="image/png" href="../img/only_logo.png" />
 
 </head>
 
@@ -35,22 +35,22 @@
 
     <nav class="navbar navbar-default">
     <div class="container">
-       <img class="logo" src="../img/logo.png"><div class="welcome text-center">
-   <p>Bienvenido a la comunidad de anuncios Ayurveda & Yoga</p><div class="hr-line"></div>
+       <img class="logo" src="../img/only_logo.png" width="150px" height="90px"><div class="welcome text-center"> 
 </div>
            <ul class="top-menu">
                 <li><a href="about.html"> Encuentra <small><i class="glyphicon glyphicon-menu-down"></i></small> </a></li>
                 <li><a href="about.html"> Conóncenos</a></li>
                 <li><a href="about.html"> Blog</a></li>
-                 <li><a href="about.html"> Anúnciate gratis</a></li>
+                 <li><a href="createEvent.html"> Anúnciate gratis</a></li>
             </ul>
         </div>
     </div>
 </nav>
 </nav>
 
-<div class="welcome text-center">
-   <p>Bienvenido a la comunidad de Yoga y Ayurveda</p><div class="hr-line"></div>
+
+ <div class="welcome text-center container">
+   <p>Bienvenido a <strong>"Encuentra tu camino"</strong>: Tu portal de Anuncios Yoga & Ayurveda</p><div class="hr-line"></div>
 </div>
 
  <div class="container">
@@ -303,10 +303,10 @@
 
 
 
-  <script src="../bower_components/jquery/dist/jquery.min.js"></script>
-  <script src="../bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-  <script src="../js/carrusel.js"></script>
-  <script src="../js/welcome.js"></script>
+  <script src="/bower_components/jquery/dist/jquery.min.js"></script>
+  <script src="/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+  <script src="/js/carrusel.js"></script>
+  <script src="/js/welcome.js"></script>
 </body>
 
 <!-- <i class="fa fa-map-marker"></i> // maps
