--- a/public/html/index.html
+++ b/public/html/index.html
@@ -7,6 +7,7 @@
 	<link rel="stylesheet" type="text/css" href="/css/style.css">
 	<link href="https://fonts.googleapis.com/css?family=Lobster+Two" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=News+Cycle" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Barrio" rel="stylesheet">
 	<link rel="icon" type="image/png" href="../img/only_logo.png" />
 
 </head>
@@ -35,7 +36,8 @@
 
     <nav class="navbar navbar-default">
     <div class="container">
-       <img class="logo" src="../img/only_logo.png" width="150px" height="90px"><div class="welcome text-center"> 
+       <img class="logo" src="../img/only_logo.png" width="150px" height="90px"><div class="welcome text-center">
+  <div class="font-categories logo title-mine"><h2>"Encuentra tu camino"</h2></div>
 </div>
            <ul class="top-menu">
                 <li><a href="about.html"> Encuentra <small><i class="glyphicon glyphicon-menu-down"></i></small> </a></li>
@@ -50,7 +52,7 @@
 
 
  <div class="welcome text-center container">
-   <p>Bienvenido a <strong>"Encuentra tu camino"</strong>: Tu portal de Anuncios Yoga & Ayurveda</p><div class="hr-line"></div>
+   <p class="welcome-top">Bienvenido a Tu portal de Anuncios: <strong>Y</strong>oga & <strong>A</strong>yurveda </p><div class="hr-line"></div>
 </div>
 
  <div class="container">
@@ -58,9 +60,10 @@
         <!-- Wrapper for slides -->
         <div class="carousel-inner">
             <div class="item active">
-                 <img src="../img/retiros.jpg">
+                 <img class="img-carrusel img-opac" src="../img/retiross.jpg">
+               
                 <div class="carousel-caption">
-                    <div class="form-group label-taller">
+                    <div class="form-group label-taller font-retiro">  <p class="text-center font-categories size-title-categories">Retiros</p>
  						<label for="sel1" class="label-taller">Selecciona una categoria:</label>
 							 <i class="glyphicon glyphicon-hand-down" width="70px"></i> 
 							 <select class="form-control select-taller" id="sel1">
@@ -73,10 +76,10 @@
             </div>
             <!-- End Item -->
             <div class="item">
-                <img src="../img/formaciones.jpg">
+                <img class="img-carrusel img-opac" src="../img/formaciones.jpg" height="-300px;">
                 <div class="carousel-caption">
-                   <div class="form-group label-taller">
- 						<label for="sel1" class="label-taller">Selecciona una categoria:</label>
+                   <div class="form-group label-taller font-retiro"><p class="text-center font-categories size-title-categories ">Formaciones</p>
+ 						<label for="sel1" class="label-taller size-categories">Selecciona una categoria:</label>
 							 <i class="glyphicon glyphicon-hand-down" width="70px"></i> 
 							 <select class="form-control select-taller" id="sel1">
     							<option>Categoria...</option>
@@ -88,9 +91,9 @@
             </div>
             <!-- End Item -->
             <div class="item">
-                <img src="../img/talleres.jpg">
+                <img class="img-carrusel img-opac" src="../img/talleress.jpg">
                 <div class="carousel-caption">
-                  <div class="form-group label-taller">
+                  <div class="form-group label-taller font-retiro"><p class="text-center font-categories size-title-categories ">Talleres</p>
  						<label for="sel1" class="label-taller">Selecciona una categoria:</label>
 							 <i class="glyphicon glyphicon-hand-down" width="70px"></i> 
 							 <select class="form-control select-taller" id="sel1">
@@ -104,24 +107,25 @@
             </div>
             <!-- End Item -->
             <div class="item">
-                <img src="../img/conferencias.jpg">
+                <img class="img-carrusel img-opac" src="../img/conferenciass.jpg">
                 <div class="carousel-caption">
-                   <div class="form-group label-taller">
+                   <div class="form-group label-taller font-retiro"><p class="text-center font-categories size-title-categories ">Conferencias</p>
  						<label for="sel1" class="label-taller">Selecciona una categoria:</label>
 							 <i class="glyphicon glyphicon-hand-down" width="70px"></i> 
-							 <select class="form-control select-taller" id="sel1">
+							 <div class=" text-center col-md-10" >
+							 <select class="form-control select-taller " id="sel1">
     							<option>Categoria...</option>
     							<option>Yoga</option>
     							<option>Ayurveda</option>
-							</select>
+							</select></div>
 						</div>
                 </div>
             </div>
             <!-- End Item -->
             <div class="item">
-                <img src="../img/maestros.jpg">
+                <img class="img-carrusel img-opac" src="../img/maestross.jpg">
                 <div class="carousel-caption">
-                    <div class="form-group label-taller">
+                    <div class="form-group label-taller font-retiro"><p class="text-center font-categories size-title-categories ">Maestros espirituales</p>
  						<label for="sel1" class="label-taller">Selecciona una categoria:</label>
 							 <i class="glyphicon glyphicon-hand-down" width="70px"></i> 
 							 <select class="form-control select-taller" id="sel1">
@@ -135,7 +139,7 @@
              <!-- End Item -->
         </div>
         <!-- End Carousel Inner -->
-        <ul class="nav nav-pills nav-justified">
+        <ul class="nav nav-pills nav-justified size-categories">
             <li data-target="#myCarousel" data-slide-to="0" class="active"><a href="#"><i class="glyphicon glyphicon-home"></i> Retiros</a></li>
             <li data-target="#myCarousel" data-slide-to="1"><a href="#"><i class="glyphicon glyphicon-education"></i> Formaciones</a></li>
             <li data-target="#myCarousel" data-slide-to="2"><a href="#"> <i class="glyphicon glyphicon-edit"></i> Talleres</a></li>
