--- a/public/html/index.html
+++ b/public/html/index.html
@@ -29,7 +29,7 @@
             </ul>
             <ul class="nav navbar-nav navbar-right color-blue">
                 <li><a href="about.html"><i class="glyphicon glyphicon-heart-empty"></i> Mis favoritos</a></li>
-                <li><a href="about.html"><i class="glyphicon glyphicon-log-in"></i> loggin</a></li>
+                <li><a href="register-login.html"><i class="glyphicon glyphicon-log-in"></i> loggin</a></li>
             </ul>
         </div>
     </div>
@@ -66,7 +66,7 @@
                     <div class="form-group label-taller font-retiro">  <p class="text-center font-categories size-title-categories">Retiros</p>
  						<label for="sel1" class="label-taller">Selecciona una categoria:</label>
 							 <i class="glyphicon glyphicon-hand-down" width="70px"></i> 
-							 <select class="form-control select-taller" id="sel1">
+							 <select class="form-control form-personal select-taller" id="sel1">
     							<option>Categoria...</option>
     							<option>Yoga</option>
     							<option>Ayurveda</option>
@@ -81,7 +81,7 @@
                    <div class="form-group label-taller font-retiro"><p class="text-center font-categories size-title-categories ">Formaciones</p>
  						<label for="sel1" class="label-taller size-categories">Selecciona una categoria:</label>
 							 <i class="glyphicon glyphicon-hand-down" width="70px"></i> 
-							 <select class="form-control select-taller" id="sel1">
+							 <select class="form-control form-personal select-taller" id="sel1">
     							<option>Categoria...</option>
     							<option>Yoga</option>
     							<option>Ayurveda</option>
@@ -96,7 +96,7 @@
                   <div class="form-group label-taller font-retiro"><p class="text-center font-categories size-title-categories ">Talleres</p>
  						<label for="sel1" class="label-taller">Selecciona una categoria:</label>
 							 <i class="glyphicon glyphicon-hand-down" width="70px"></i> 
-							 <select class="form-control select-taller" id="sel1">
+							 <select class="form-control form-personal select-taller" id="sel1">
     							<option>Categoria...</option>
     							<option>Yoga</option>
     							<option>Ayurveda</option>
@@ -113,7 +113,7 @@
  						<label for="sel1" class="label-taller">Selecciona una categoria:</label>
 							 <i class="glyphicon glyphicon-hand-down" width="70px"></i> 
 							 <div class=" text-center col-md-10" >
-							 <select class="form-control select-taller " id="sel1">
+							 <select class="form-control form-personal select-taller " id="sel1">
     							<option>Categoria...</option>
     							<option>Yoga</option>
     							<option>Ayurveda</option>
@@ -128,7 +128,7 @@
                     <div class="form-group label-taller font-retiro"><p class="text-center font-categories size-title-categories ">Maestros espirituales</p>
  						<label for="sel1" class="label-taller">Selecciona una categoria:</label>
 							 <i class="glyphicon glyphicon-hand-down" width="70px"></i> 
-							 <select class="form-control select-taller" id="sel1">
+							 <select class="form-control form-personal select-taller" id="sel1">
     							<option>Categoria...</option>
     							<option>Yoga</option>
     							<option>Ayurveda</option>
@@ -311,7 +311,7 @@
   <script src="/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
   <script src="/js/carrusel.js"></script>
   <script src="/js/welcome.js"></script>
-  
+
 </body>
 
 <!-- <i class="fa fa-map-marker"></i> // maps
