--- a/public/html/index.html
+++ b/public/html/index.html
@@ -29,7 +29,7 @@
             </ul>
             <ul class="nav navbar-nav navbar-right color-blue">
                 <li><a href="about.html"><i class="glyphicon glyphicon-heart-empty"></i> Mis favoritos</a></li>
-                <li><a href="register-login.html"><i class="glyphicon glyphicon-log-in"></i> loggin</a></li>
+                <li><a href="Register-login.html"><i class="glyphicon glyphicon-log-in"></i> loggin</a></li>
             </ul>
         </div>
     </div>
@@ -43,7 +43,7 @@
                 <li><a href="about.html"> Encuentra <small><i class="glyphicon glyphicon-menu-down"></i></small> </a></li>
                 <li><a href="about.html"> Conóncenos</a></li>
                 <li><a href="about.html"> Blog</a></li>
-                 <li><a href="createEvent.html"> Anúnciate gratis</a></li>
+                 <li><a href="myAcount.html"> Anúnciate gratis</a></li>
             </ul>
         </div>
     </div>
