--- a/public/html/Register-login.html
+++ b/public/html/Register-login.html
@@ -36,7 +36,7 @@
 
     <nav class="navbar navbar-default">
     <div class="container">
-       <img class="logo" src="../img/only_logo.png" width="150px" height="90px"><div class="welcome text-center">
+      <a href="index.html"> <img class="logo" src="../img/only_logo.png" width="150px" height="90px"><div class="welcome text-center"></a>
   <div class="font-categories logo title-mine"><h2>"Encuentra tu camino"</h2></div>
 </div>
            <ul class="top-menu">
@@ -68,6 +68,7 @@
                   <div class="form-group">
                     <input type="text" name="username" id="username" tabindex="1" class="form-control" placeholder="Username" value="">
                   </div>
+
                   <div class="form-group">
                     <input type="password" name="password" id="password" tabindex="2" class="form-control" placeholder="Password">
                   </div>
@@ -76,7 +77,7 @@
                     <label for="checkbox1">Remember Me</label>   
                   </div>
                   <div class="col-xs-6 form-group pull-right">     
-                        <input type="submit" name="login-submit" id="login-submit" tabindex="4" class="form-control btn btn-login font-categories" value="Log In">
+                        <a href="myAcount"><input type="submit" name="login-submit" id="login-submit" tabindex="4" class="form-control btn btn-login font-categories" value="Log In"></a>
                   </div>
               </form>
               <form id="register-form" action="#" method="post" role="form" style="display: none;">
@@ -107,7 +108,7 @@
         <div class="panel-heading">
           <div class="row">
             <div class="col-xs-6 tabs">
-              <a href="#" class="active" id="login-form-link"><div class="login font-categories">LOGIN</div></a>
+              <a href="myAcount.html" class="active" id="login-form-link"><div class="login font-categories">LOGIN</div></a>
             </div>
             <div class="col-xs-6 tabs">
               <a href="#" id="register-form-link"><div class="register font-categories">REGISTER</div></a>
@@ -118,7 +119,7 @@
     </div>
   </div>
 </div>
-
+<a href="myAcount.html">mi cuenta</a>
 
 <footer class="footer">
      <p class="copy col-md-6">Copyright ® 2017, All Rights Reserved</p>
