--- a/public/html/myAcount.html
+++ b/public/html/myAcount.html
@@ -36,7 +36,7 @@
 
     <nav class="navbar navbar-default">
     <div class="container">
-       <img class="logo" src="../img/only_logo.png" width="150px" height="90px"><div class="welcome text-center">
+       <a href="index.html"><img class="logo" src="../img/only_logo.png" width="150px" height="90px"><div class="welcome text-center"></a>
   <div class="font-categories logo title-mine"><h2>"Encuentra tu camino"</h2></div>
 </div>
            <ul class="top-menu">
