createEvent.html form

--- a/public/html/myAcount.html
+++ b/public/html/myAcount.html
@@ -80,7 +80,7 @@
       <div class="panel-body">
   
   <aside class="text-right">
-        <i class="glyphicon glyphicon-plus-sign"></i> Crear anuncio
+        <a href="createEvent.html"><i class="glyphicon glyphicon-plus-sign"></i> Crear anuncio</a>
   </aside>          
 <div class="row cont-body">
   <div class="col-sm-6 col-md-4">
