--- a/public/html/createEvent.html
+++ b/public/html/createEvent.html
@@ -1,4 +1,4 @@
-
+<!DOCTYPE html>
 <html lang="es">
 <head>
     <meta charset="UTF-8">
@@ -69,13 +69,26 @@
 
 <div class="container well">
     <div class="row">
-    <div class="col-xs-12 col-md-6">
+    <div class="col-xs-12 col-md-3">
         <form>
             <fieldset class="form-group">
             <label for="recipetitle">Titulo</label>
             <input class="form-control" id="recipetitle" rows="1" maxlength="30"/>
             </fieldset>
             </div>
+
+<div class="col-xs-12 col-md-3">
+             <fieldset class="form-group">
+            <label for="recipe-editor-ingredients">Camino</label>
+           <select class="form-control">
+                <option>Selecciona...</option>
+                <option>Yoga</option>
+                <option>Ayurveda</option>
+                <option>Yoga y Ayurveda</option>
+            </select>
+            </fieldset>
+            </div>
+
 
     <div class="col-xs-12 col-md-3">
              <fieldset class="form-group">
