--- a/public/html/index.html
+++ b/public/html/index.html
@@ -149,7 +149,7 @@
   
     <!-- End Carousel -->
 </div>
-</div>
+</div></a></div></nav></nav>
 
 
 
@@ -294,7 +294,7 @@
 
 <section class="row pre-footer cont-body">
 	<div class="container">
-	<div class="col-md-4 "><h1 class="text-center">Conecta</h1><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat, voluptas suscipit itaque, vel a excepturi eius fugit reiciendis velit fuga ad vero, corrupti maiores eos ipsum consectetur molestiae error quos?</p></div>
+  	<div class="col-md-4 "><h1 class="text-center">Conecta</h1><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat, voluptas suscipit itaque, vel a excepturi eius fugit reiciendis velit fuga ad vero, corrupti maiores eos ipsum consectetur molestiae error quos?</p></div>
     <div class="col-md-4 "><h1 class="text-center">Conecta</h1><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio iste fuga eveniet ex? Quasi, adipisci. Laboriosam quisquam ab distinctio, magnam eos, natus ullam incidunt eaque ratione asperiores ea id ipsa!</p></div>
     <div class="col-md-4 "><h1 class="text-center">Conecta</h1><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio iste fuga eveniet ex? Quasi, adipisci. Laboriosam quisquam ab distinctio, magnam eos, natus ullam incidunt eaque ratione asperiores ea id ipsa!</p></div>
     </div>
