in progress delete, modalSocial, & moment

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Ayurveda & Yoga</title>
-	<link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.min.css">
+	<link rel="stylesheet" href="/../bower_components/bootstrap/dist/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="/css/style.css">
 	<link href="https://fonts.googleapis.com/css?family=Lobster+Two" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=News+Cycle" rel="stylesheet">
@@ -307,8 +307,8 @@
 
 
 
-  <script src="/bower_components/jquery/dist/jquery.min.js"></script>
-  <script src="/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+  <script src="/../bower_components/jquery/dist/jquery.min.js"></script>
+  <script src="/../bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
   <script src="/js/carrusel.js"></script>
   <script src="/js/welcome.js"></script>
 
