--- a/public/html/createEvent.html
+++ b/public/html/createEvent.html
@@ -9,10 +9,34 @@
     <link href="https://fonts.googleapis.com/css?family=News+Cycle" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Barrio" rel="stylesheet">
     <link rel="icon" type="image/png" href="../img/only_logo.png" />
-
+  		<script src="https://maps.googleapis.com/maps/api/js?sensor=false"></script>
+  		<link rel="stylesheet" href="/maps/documentation/javascript/demos/demos.css">
 </head>
 
-<body>
+<div id="map"></div>
+    <script>
+      function initMap() {
+        var myLatLng = {lat: -25.363, lng: 131.044};
+
+        // Create a map object and specify the DOM element for display.
+        var map = new google.maps.Map(document.getElementById('map'), {
+          center: myLatLng,
+          scrollwheel: false,
+          zoom: 4
+        });
+
+        // Create a marker and set its position.
+        var marker = new google.maps.Marker({
+          map: map,
+          position: myLatLng,
+          title: 'Hello World!'
+        });
+      }
+
+    </script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&callback=initMap"
+        async defer></script>
+
 
 
 <nav class="navbar  navbar-default  navbar-fixed-top header-mine">
