--- a/public/html/fullEvent.html
+++ b/public/html/fullEvent.html
@@ -17,8 +17,40 @@
 	<link rel="stylesheet" type="text/css" href="../css/style.css">
 	<link rel="icon" type="image/png" href="../img/only_logo.png">
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+  <link rel="stylesheet" href="/maps/documentation/javascript/demos/demos.css">
 </head>
 <body>
+
+ <div id="map"></div>
+    <script>
+      function initMap() {
+        var myLatLng = {lat: -25.363, lng: 131.044};
+
+        // Create a map object and specify the DOM element for display.
+        var map = new google.maps.Map(document.getElementById('map'), {
+          center: myLatLng,
+          scrollwheel: false,
+          zoom: 4
+        });
+
+        // Create a marker and set its position.
+        var marker = new google.maps.Marker({
+          map: map,
+          position: myLatLng,
+          title: 'Hello World!'
+        });
+      }
+
+    </script>
+
+
+
+
+
+
+
+
+
 
 <nav class="navbar  navbar-default  navbar-fixed-top header-mine">
     <div class="container">
@@ -185,7 +217,8 @@ $('.carousel').carousel({
 
 
 
-
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD4DmyIOrCfHSzrlWntsWwzmdyzUuzWJ3c&callback=initMap"
+        async defer></script>
 
 <script src="https://code.jquery.com/jquery-2.2.4.js" integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI=" crossorigin="anonymous"></script>
 	<!-- Latest compiled and minified JS -->
