--- a/public/html/Register-login.html
+++ b/public/html/Register-login.html
@@ -51,74 +51,78 @@
 </nav>
 
  <div class="welcome text-center container">
-   <p class="welcome-top">Acceso</p><div class="hr-line"></div>
+    <p class="welcome-top">Acceso</p>
+    <div class="hr-line"></div>
 </div>
-
-
-
 <div class="container login-top">
-   <div class="row">
-    <div class="col-md-6 col-md-offset-3">
-      <div class="panel panel-login">
-        <div class="panel-body">
-          <div class="row">
-            <div class="col-lg-12">
-              <form id="login-form" action="#" method="post" role="form" style="display: block;">
-                <h2 class="font-categories">LOGIN</h2>
-                  <div class="form-group">
-                    <input type="text" name="username" id="username" tabindex="1" class="form-control" placeholder="Username" value="">
-                  </div>
-
-                  <div class="form-group">
-                    <input type="password" name="password" id="password" tabindex="2" class="form-control" placeholder="Password">
-                  </div>
-                  <div class="col-xs-6 form-group pull-left checkbox">
-                    <input id="checkbox1" type="checkbox" name="remember">
-                    <label for="checkbox1">Remember Me</label>   
-                  </div>
-                  <div class="col-xs-6 form-group pull-right">     
-                        <a href="myAcount"><input type="submit" name="login-submit" id="login-submit" tabindex="4" class="form-control btn btn-login font-categories" value="Log In"></a>
-                  </div>
-              </form>
-              <form id="register-form" action="#" method="post" role="form" style="display: none;">
-                <h2 class="font-categories">REGISTER</h2>
-                  <div class="form-group">
-                    <input type="text" name="username" id="username" tabindex="1" class="form-control" placeholder="Username" value="">
-                  </div>
-                  <div class="form-group">
-                    <input type="email" name="email" id="email" tabindex="1" class="form-control" placeholder="Email Address" value="">
-                  </div>
-                  <div class="form-group">
-                    <input type="password" name="password" id="password" tabindex="2" class="form-control" placeholder="Password">
-                  </div>
-                  <div class="form-group">
-                    <input type="password" name="confirm-password" id="confirm-password" tabindex="2" class="form-control" placeholder="Confirm Password">
-                  </div>
-                  <div class="form-group">
+    <div class="row">
+        <div class="col-md-6 col-md-offset-3">
+            <div class="panel panel-login">
+                <div class="panel-body">
                     <div class="row">
-                      <div class="col-sm-6 col-sm-offset-3">
-                        <input type="submit" name="register-submit" id="register-submit" tabindex="4" class="form-control btn btn-register font-categories" value="Register Now">
-                      </div>
+                        <div class="col-lg-12">
+                            <form id="login-form" action="#" method="post" role="form" style="display: block;">
+                                <h2 class="font-categories">LOGIN</h2>
+                                <div class="form-group">
+                                    <input type="text" name="username" id="username" tabindex="1" class="form-control" placeholder="Username" value="">
+                                </div>
+                                <div class="form-group">
+                                    <input type="password" name="password" id="password" tabindex="2" class="form-control" placeholder="Password">
+                                </div>
+                                <div class="col-xs-6 form-group pull-left checkbox">
+                                    <input id="checkbox1" type="checkbox" name="remember">
+                                    <label for="checkbox1">Remember Me</label>
+                                </div>
+                                <div class="col-xs-6 form-group pull-right">
+                                    <a href="myAcount">
+                                        <input type="submit" name="login-submit" id="login-submit" tabindex="4" class="form-control btn btn-login font-categories" value="Log In">
+                                    </a>
+                                </div>
+                            </form>
+                            <form id="register-form" action="#" method="post" role="form" style="display: none;">
+                                <h2 class="font-categories">REGISTER</h2>
+                                <div class="form-group">
+                                    <input type="text" name="username" id="username" tabindex="1" class="form-control" placeholder="Username" value="">
+                                </div>
+                                <div class="form-group">
+                                    <input type="email" name="email" id="email" tabindex="1" class="form-control" placeholder="Email Address" value="">
+                                </div>
+                                <div class="form-group">
+                                    <input type="password" name="password" id="password" tabindex="2" class="form-control" placeholder="Password">
+                                </div>
+                                <div class="form-group">
+                                    <input type="password" name="confirm-password" id="confirm-password" tabindex="2" class="form-control" placeholder="Confirm Password">
+                                </div>
+                                <div class="form-group">
+                                    <div class="row">
+                                        <div class="col-sm-6 col-sm-offset-3">
+                                            <input type="submit" name="register-submit" id="register-submit" tabindex="4" class="form-control btn btn-register font-categories" value="Register Now">
+                                        </div>
+                                    </div>
+                                </div>
+                            </form>
+                        </div>
                     </div>
-                  </div>
-              </form>
+                </div>
+                <div class="panel-heading">
+                    <div class="row">
+                        <div class="col-xs-6 tabs">
+                            <a href="myAcount.html" class="active" id="login-form-link">
+                                <div class="login font-categories">LOGIN</div>
+                            </a>
+                        </div>
+                        <div class="col-xs-6 tabs">
+                            <a href="#" id="register-form-link">
+                                <div class="register font-categories">REGISTER</div>
+                            </a>
+                        </div>
+                    </div>
+                </div>
             </div>
-          </div>
         </div>
-        <div class="panel-heading">
-          <div class="row">
-            <div class="col-xs-6 tabs">
-              <a href="myAcount.html" class="active" id="login-form-link"><div class="login font-categories">LOGIN</div></a>
-            </div>
-            <div class="col-xs-6 tabs">
-              <a href="#" id="register-form-link"><div class="register font-categories">REGISTER</div></a>
-            </div>
-          </div>
-        </div>
-      </div>
     </div>
-  </div>
 </div>
+
 <a href="myAcount.html">mi cuenta</a>
 
 <footer class="footer">
